--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Free online tools for image and PDF processing, file conversion, QR code generation, and more. Optimized for all devices.">
+  <meta name="description" content="Free online tools for image and PDF processing, file conversion, QR code generation, and more. Compress, resize, merge, split, and convert files effortlessly.">
   <meta name="keywords" content="image compression, PDF compression, image resizer, PDF merger, image converter, PDF splitter, QR code generator, file converter, password generator, PDF comparer, PDF searchable text">
   <meta name="author" content="Your Website Name">
-  <title>Online Tools - Image, PDF, and File Utilities</title>
+  <title>Free Online Tools - Image & PDF Processing, File Conversion</title>
   <style>
     /* General Styles */
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      line-height: 1.6;
+      background-color: #f4f4f9;
       color: #333;
     }
 
@@ -23,9 +23,8 @@
       margin: 0 auto;
     }
 
-    /* Header */
     header {
-      background: #007BFF;
+      background: #4a90e2;
       color: #fff;
       padding: 20px 0;
       text-align: center;
@@ -41,75 +40,56 @@
       font-size: 1.2rem;
     }
 
-    /* Navigation */
-    nav {
-      background: #333;
-      padding: 10px 0;
-    }
-
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-    }
-
-    nav ul li {
-      margin: 0 15px;
-    }
-
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 1.1rem;
-    }
-
-    nav ul li a.active {
-      font-weight: bold;
-      border-bottom: 2px solid #007BFF;
-    }
-
-    /* Tool Sections */
-    .tool-section {
-      padding: 40px 0;
-    }
-
-    .tool-section h2 {
-      text-align: center;
-      margin-bottom: 30px;
-      font-size: 2rem;
-    }
-
-    .tool-grid {
+    /* Tools Grid */
+    .tools-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
+      padding: 40px 0;
     }
 
     .tool-card {
-      background: #f9f9f9;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       text-align: center;
       transition: transform 0.3s ease;
-      text-decoration: none;
-      color: inherit;
     }
 
     .tool-card:hover {
       transform: translateY(-10px);
     }
 
-    .tool-card h3 {
-      margin: 0 0 10px;
+    .tool-card h2 {
       font-size: 1.5rem;
+      margin: 0 0 10px;
     }
 
     .tool-card p {
-      margin: 0;
+      font-size: 1rem;
       color: #666;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #4a90e2;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #357abd;
+    }
+
+    /* Ad Styles */
+    .ad-banner, .ad-square {
+      margin: 20px 0;
+      text-align: center;
     }
 
     /* Footer */
@@ -121,215 +101,131 @@
       margin-top: 40px;
     }
 
+    footer p {
+      margin: 0;
+    }
+
     /* Responsive Design */
     @media (max-width: 768px) {
-      nav ul {
-        flex-direction: column;
-        align-items: center;
+      header h1 {
+        font-size: 2rem;
       }
 
-      nav ul li {
-        margin: 10px 0;
+      header p {
+        font-size: 1rem;
       }
 
-      .tool-grid {
-        grid-template-columns: 1fr;
+      .tools-grid {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
     }
   </style>
-  <!-- Google AdSense Code -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_UNIT_ID" crossorigin="anonymous"></script>
+  <!-- Google AdSense Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Online Tools</h1>
-      <p>Your one-stop solution for image, PDF, and file utilities.</p>
+      <h1>Free Online Tools</h1>
+      <p>Your one-stop solution for image and PDF processing, file conversion, and more.</p>
     </div>
   </header>
 
-  <nav>
+  <main>
     <div class="container">
-      <ul>
-        <li><a href="#all-tools" class="active">All Tools</a></li>
-        <li><a href="#image-tools">Image Tools</a></li>
-        <li><a href="#pdf-tools">PDF Tools</a></li>
-        <li><a href="#other-tools">Other Tools</a></li>
-      </ul>
-    </div>
-  </nav>
+      <!-- AdSense Banner Ad -->
+      <div class="ad-banner">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-YOUR_AD_SENSE_ID"
+             data-ad-slot="BANNER_AD_SLOT_ID"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
 
-  <section id="ad-section">
-    <div class="container">
-      <!-- AdSense Ad Unit -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-YOUR_AD_UNIT_ID"
-           data-ad-slot="1234567890"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-  </section>
-
-  <section id="all-tools" class="tool-section">
-    <div class="container">
-      <h2>All Tools</h2>
-      <div class="tool-grid">
-        <a href="#" class="tool-card">
-          <h3>Image Compression</h3>
+      <!-- Tools Grid -->
+      <div class="tools-grid">
+        <div class="tool-card">
+          <h2>Image Compression</h2>
           <p>Compress images without losing quality.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Compression</h3>
-          <p>Reduce PDF file size efficiently.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>Image Resizer</h3>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>PDF Compression</h2>
+          <p>Reduce PDF file size easily.</p>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>Image Resizer</h2>
           <p>Resize images to any dimension.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Merger</h3>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>PDF Merger</h2>
           <p>Merge multiple PDFs into one.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>Image Converter</h3>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>Image Converter</h2>
           <p>Convert images to different formats.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Splitter</h3>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>PDF Splitter</h2>
           <p>Split PDFs into individual pages.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>QR Code Generator</h3>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>QR Code Generator</h2>
           <p>Create QR codes for URLs, text, and more.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>File Converter</h3>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>File Converter</h2>
           <p>Convert files to various formats.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>Password Generator</h3>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>Password Generator</h2>
           <p>Generate strong and secure passwords.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Comparer</h3>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>PDF Comparer</h2>
           <p>Compare two PDFs for differences.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Searchable Text</h3>
-          <p>Make PDFs searchable with OCR.</p>
-        </a>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+          <h2>PDF Searchable Text</h2>
+          <p>Make scanned PDFs searchable.</p>
+          <a href="#" class="btn">Use Tool</a>
+        </div>
       </div>
-    </div>
-  </section>
 
-  <section id="image-tools" class="tool-section">
-    <div class="container">
-      <h2>Image Tools</h2>
-      <div class="tool-grid">
-        <a href="#" class="tool-card">
-          <h3>Image Compression</h3>
-          <p>Compress images without losing quality.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>Image Resizer</h3>
-          <p>Resize images to any dimension.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>Image Converter</h3>
-          <p>Convert images to different formats.</p>
-        </a>
+      <!-- AdSense Square Ad -->
+      <div class="ad-square">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-YOUR_AD_SENSE_ID"
+             data-ad-slot="SQUARE_AD_SLOT_ID"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
       </div>
     </div>
-  </section>
-
-  <section id="pdf-tools" class="tool-section">
-    <div class="container">
-      <h2>PDF Tools</h2>
-      <div class="tool-grid">
-        <a href="#" class="tool-card">
-          <h3>PDF Compression</h3>
-          <p>Reduce PDF file size efficiently.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Merger</h3>
-          <p>Merge multiple PDFs into one.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Splitter</h3>
-          <p>Split PDFs into individual pages.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Comparer</h3>
-          <p>Compare two PDFs for differences.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>PDF Searchable Text</h3>
-          <p>Make PDFs searchable with OCR.</p>
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <section id="other-tools" class="tool-section">
-    <div class="container">
-      <h2>Other Tools</h2>
-      <div class="tool-grid">
-        <a href="#" class="tool-card">
-          <h3>QR Code Generator</h3>
-          <p>Create QR codes for URLs, text, and more.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>File Converter</h3>
-          <p>Convert files to various formats.</p>
-        </a>
-        <a href="#" class="tool-card">
-          <h3>Password Generator</h3>
-          <p>Generate strong and secure passwords.</p>
-        </a>
-      </div>
-    </div>
-  </section>
+  </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2023 Online Tools. All rights reserved.</p>
+      <p>&copy; 2023 Free Online Tools. All rights reserved.</p>
     </div>
   </footer>
-
-  <script>
-    // Smooth scrolling for navigation links
-    document.querySelectorAll('nav ul li a').forEach(anchor => {
-      anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
-      });
-    });
-
-    // Highlight active section in navigation
-    window.addEventListener('scroll', () => {
-      const sections = document.querySelectorAll('.tool-section');
-      const navLinks = document.querySelectorAll('nav ul li a');
-
-      sections.forEach(section => {
-        const sectionTop = section.offsetTop;
-        const sectionHeight = section.clientHeight;
-        if (window.scrollY >= sectionTop - sectionHeight / 3) {
-          const id = section.getAttribute('id');
-          navLinks.forEach(link => {
-            link.classList.remove('active');
-            if (link.getAttribute('href') === `#${id}`) {
-              link.classList.add('active');
-            }
-          });
-        }
-      });
-    });
-  </script>
 </body>
 </html>
