--- a/img-compress.html
+++ b/img-compress.html
@@ -1,237 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Compress your images online with our fully responsive image compression tool. Optimize images for web use with adjustable compression levels.">
-    <meta name="keywords" content="image compression, optimize images, image optimizer, online image compressor">
-    <meta name="author" content="Your Name">
-    <title>Online Image Compression Tool</title>
-    <style>
-        /* CSS Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Compress images online for free. Reduce image file size without losing quality. Choose compression level and desired output size.">
+  <meta name="keywords" content="image compression, compress images, reduce image size, image optimizer, free image compressor">
+  <meta name="author" content="Your Website Name">
+  <title>Free Image Compression Tool - Compress Images Online</title>
+  <style>
+    /* General Styles */
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+      color: #333;
+    }
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            line-height: 1.6;
-        }
+    .container {
+      width: 90%;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin-top: 20px;
+    }
 
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+    h1 {
+      text-align: center;
+      color: #4a90e2;
+    }
 
-        main {
-            padding: 20px;
-            max-width: 800px;
-            margin: 20px auto;
-        }
+    .upload-section, .options-section, .output-section {
+      margin-bottom: 20px;
+    }
 
-        #upload-section {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
+    label {
+      display: block;
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
 
-        #upload-section input[type="file"] {
-            display: none;
-        }
+    input[type="file"], select, input[type="number"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
 
-        #upload-section label {
-            display: inline-block;
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+    .btn {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      background: #4a90e2;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
 
-        #upload-section label:hover {
-            background-color: #45a049;
-        }
+    .btn:hover {
+      background: #357abd;
+    }
 
-        #compression-level {
-            margin: 20px 0;
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            width: 100%;
-            max-width: 200px;
-        }
+    .output-section {
+      text-align: center;
+    }
 
-        #compress-btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+    .output-section p {
+      font-size: 1.1rem;
+      margin: 10px 0;
+    }
 
-        #compress-btn:hover {
-            background-color: #45a049;
-        }
+    .ad-banner {
+      margin: 20px 0;
+      text-align: center;
+    }
 
-        #result-section {
-            margin-top: 20px;
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            display: none; /* Hidden by default */
-        }
+    /* Responsive Design */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
 
-        #compressed-image {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-top: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        #download-link {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        #download-link:hover {
-            background-color: #45a049;
-        }
-
-        .ad-unit {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            background-color: #4CAF50;
-            color: white;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Responsive Design */
-        @media (max-width: 600px) {
-            header h1 {
-                font-size: 24px;
-            }
-
-            #upload-section {
-                padding: 15px;
-            }
-
-            #compression-level, #compress-btn {
-                width: 100%;
-            }
-        }
-    </style>
-    <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_UNIT_ID" crossorigin="anonymous"></script>
+      .btn {
+        font-size: 14px;
+      }
+    }
+  </style>
+  <!-- Google AdSense Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>Online Image Compression Tool</h1>
-    </header>
-    <main>
-        <section id="upload-section">
-            <input type="file" id="image-upload" accept="image/*">
-            <label for="image-upload">Choose Image</label>
-            <br>
-            <label for="compression-level">Compression Level:</label>
-            <select id="compression-level">
-                <option value="0.1">Low</option>
-                <option value="0.5" selected>Medium</option>
-                <option value="0.9">High</option>
-            </select>
-            <br>
-            <button id="compress-btn">Compress Image</button>
-        </section>
-        <section id="result-section">
-            <h2>Compressed Image</h2>
-            <img id="compressed-image" src="" alt="Compressed Image">
-            <a id="download-link" href="#" download="compressed-image.jpg">Download Compressed Image</a>
-        </section>
-        <!-- AdSense Ad Unit -->
-        <div class="ad-unit">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-YOUR_AD_UNIT_ID"
-                 data-ad-slot="YOUR_AD_SLOT_ID"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2023 Online Image Compression Tool. All rights reserved.</p>
-    </footer>
-    <script>
-        // JavaScript Functionality
-        document.getElementById('compress-btn').addEventListener('click', function() {
-            const fileInput = document.getElementById('image-upload');
-            const compressionLevel = parseFloat(document.getElementById('compression-level').value);
-            const resultSection = document.getElementById('result-section');
-            const compressedImage = document.getElementById('compressed-image');
-            const downloadLink = document.getElementById('download-link');
+  <header>
+    <div class="container">
+      <h1>Image Compression Tool</h1>
+      <p>Compress images online for free. Reduce image file size without losing quality.</p>
+    </div>
+  </header>
 
-            if (fileInput.files.length === 0) {
-                alert('Please select an image to compress.');
-                return;
+  <main>
+    <div class="container">
+      <!-- AdSense Banner Ad -->
+      <div class="ad-banner">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-YOUR_AD_SENSE_ID"
+             data-ad-slot="BANNER_AD_SLOT_ID"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+
+      <!-- Upload Section -->
+      <div class="upload-section">
+        <label for="image-upload">Upload Image:</label>
+        <input type="file" id="image-upload" accept="image/*">
+      </div>
+
+      <!-- Compression Options -->
+      <div class="options-section">
+        <label for="compression-level">Compression Level:</label>
+        <select id="compression-level">
+          <option value="0.1">Low</option>
+          <option value="0.5">Medium</option>
+          <option value="0.9">High</option>
+        </select>
+
+        <label for="desired-size">Desired Output Size (MB):</label>
+        <input type="number" id="desired-size" placeholder="Enter desired size in MB (optional)" min="0">
+      </div>
+
+      <!-- Compress Button -->
+      <button class="btn" id="compress-btn">Compress Image</button>
+
+      <!-- Output Section -->
+      <div class="output-section">
+        <p id="original-size"></p>
+        <p id="compressed-size"></p>
+        <a id="download-link" style="display: none;">Download Compressed Image</a>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2023 Free Online Tools. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script>
+    // JavaScript for Image Compression
+    const compressionLevelSelect = document.getElementById('compression-level');
+    const desiredSizeInput = document.getElementById('desired-size');
+
+    // Disable compression level if desired size is entered
+    desiredSizeInput.addEventListener('input', function () {
+      if (this.value) {
+        compressionLevelSelect.disabled = true;
+      } else {
+        compressionLevelSelect.disabled = false;
+      }
+    });
+
+    document.getElementById('compress-btn').addEventListener('click', function () {
+      const fileInput = document.getElementById('image-upload');
+      const desiredSize = parseFloat(desiredSizeInput.value) * 1024 * 1024; // Convert MB to bytes
+
+      if (fileInput.files.length === 0) {
+        alert('Please upload an image first.');
+        return;
+      }
+
+      const file = fileInput.files[0];
+      const reader = new FileReader();
+
+      reader.onload = function (event) {
+        const img = new Image();
+        img.src = event.target.result;
+
+        img.onload = function () {
+          const canvas = document.createElement('canvas');
+          const ctx = canvas.getContext('2d');
+
+          // Set canvas dimensions
+          canvas.width = img.width;
+          canvas.height = img.height;
+
+          // Draw image on canvas
+          ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+
+          // Function to compress image
+          const compressImage = (quality) => {
+            return new Promise((resolve) => {
+              canvas.toBlob(
+                (blob) => resolve(blob),
+                'image/jpeg',
+                quality
+              );
+            });
+          };
+
+          // Adjust compression to meet desired size
+          const adjustCompression = async () => {
+            let quality = 1.0;
+            let blob = await compressImage(quality);
+
+            if (desiredSize && blob.size <= desiredSize) {
+              return blob;
             }
 
-            const file = fileInput.files[0];
-            const reader = new FileReader();
+            // Binary search for optimal quality
+            let low = 0.1;
+            let high = 1.0;
+            while (high - low > 0.01) {
+              quality = (low + high) / 2;
+              blob = await compressImage(quality);
 
-            reader.onload = function(event) {
-                const img = new Image();
-                img.src = event.target.result;
+              if (blob.size > desiredSize) {
+                high = quality;
+              } else {
+                low = quality;
+              }
+            }
 
-                img.onload = function() {
-                    const canvas = document.createElement('canvas');
-                    const ctx = canvas.getContext('2d');
+            return blob;
+          };
 
-                    canvas.width = img.width;
-                    canvas.height = img.height;
+          adjustCompression().then((blob) => {
+            // Display original and compressed sizes
+            document.getElementById('original-size').innerText = `Original Size: ${(file.size / (1024 * 1024)).toFixed(2)} MB`;
+            document.getElementById('compressed-size').innerText = `Compressed Size: ${(blob.size / (1024 * 1024)).toFixed(2)} MB`;
 
-                    ctx.drawImage(img, 0, 0);
+            // Create download link
+            const downloadLink = document.getElementById('download-link');
+            downloadLink.href = URL.createObjectURL(blob);
+            downloadLink.download = `compressed-${file.name}`;
+            downloadLink.style.display = 'block';
+          });
+        };
+      };
 
-                    canvas.toBlob(function(blob) {
-                        const compressedUrl = URL.createObjectURL(blob);
-                        compressedImage.src = compressedUrl;
-                        downloadLink.href = compressedUrl;
-                        resultSection.style.display = 'block';
-                    }, 'image/jpeg', compressionLevel);
-                };
-            };
-
-            reader.readAsDataURL(file);
-        });
-    </script>
+      reader.readAsDataURL(file);
+    });
+  </script>
 </body>
 </html>
