--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="tool-card">
           <h2>Image Compression</h2>
           <p>Compress images without losing quality.</p>
-          <a href="/img-compress.html" class="btn">Use Tool</a>
+          <a href="tools/img-compress.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Compression</h2>
