--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="tool-card">
           <h2>Image Resizer</h2>
           <p>Resize images to any dimension.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/img-resize.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Merger</h2>
