--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Free online tools for image and PDF processing, file conversion, QR code generation, and more. Compress, resize, merge, split, and convert files effortlessly.">
-  <meta name="keywords" content="image compression, PDF compression, image resizer, PDF merger, image converter, PDF splitter, QR code generator, file converter, password generator, PDF comparer, PDF searchable text">
+  <meta name="keywords" content="image compression, PDF compression, image resizer, PDF merger, image converter, PDF splitter, QR code generator, file converter, password generator, PDF comparer, PDF searchable text, PDF Decrypt, PDF remove password protection">
   <meta name="author" content="Your Website Name">
   <title>Free Online Tools - Image & PDF Processing, File Conversion</title>
   <style>
@@ -203,6 +203,11 @@
           <h2>PDF Searchable Text</h2>
           <p>Make scanned PDFs searchable.</p>
           <a href="#" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
+        <h2>PDF Decrypt</h2>
+        <p>Remove password protection from PDFs.</p>
+        <a href="#" class="btn">Use Tool</a>
         </div>
       </div>
 
