--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="tool-card">
           <h2>PDF Merger</h2>
           <p>Merge multiple PDFs into one.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/pdf-merge.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>Image Converter</h2>
