--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="tool-card">
           <h2>Image Converter</h2>
           <p>Convert images to different formats.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/img-converter.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Splitter</h2>
