--- a/index.html
+++ b/index.html
@@ -152,27 +152,27 @@
         <div class="tool-card">
           <h2>Image Compression</h2>
           <p>Compress images without losing quality.</p>
-          <a href="/img-compress.html" class="btn">Use Tool</a>
+          <a href="Tools/img-compress.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Compression</h2>
           <p>Reduce PDF file size easily.</p>
-          <a href="/pdf-compress.html" class="btn">Use Tool</a>
+          <a href="Tools/pdf-compress.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>Image Resizer</h2>
           <p>Resize images to any dimension.</p>
-          <a href="/img-resize.html" class="btn">Use Tool</a>
+          <a href="Tools/img-resize.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Merger</h2>
           <p>Merge multiple PDFs into one.</p>
-          <a href="/pdf-merge.html" class="btn">Use Tool</a>
+          <a href="Tools/pdf-merge.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>Image Converter</h2>
           <p>Convert images to different formats.</p>
-          <a href="/img-converter.html" class="btn">Use Tool</a>
+          <a href="Tools/img-converter.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Splitter</h2>
