--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="tool-card">
           <h2>PDF Compression</h2>
           <p>Reduce PDF file size easily.</p>
-          <a href="Tools/pdf-compress.html" class="btn">Use Tool</a>
+          <a href="/pdf-compress.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>Image Resizer</h2>
