--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Free online tools for image and PDF processing, file conversion, QR code generation, and more. Compress, resize, merge, split, and convert files effortlessly.">
-  <meta name="keywords" content="image compression, PDF compression, image resizer, PDF merger, image converter, PDF splitter, QR code generator, file converter, password generator, PDF comparer, PDF searchable text, PDF Decrypt, PDF remove password protection">
+  <meta name="keywords" content="image compression, PDF compression, image resizer, PDF merger, image converter, PDF splitter, QR code generator, file converter, password generator, PDF comparer, PDF searchable text, PDF Decrypt, PDF Encrypt, PDF remove password protection">
   <meta name="author" content="Your Website Name">
   <title>Free Online Tools - Image & PDF Processing, File Conversion</title>
   <style>
@@ -177,37 +177,37 @@
         <div class="tool-card">
           <h2>PDF Splitter</h2>
           <p>Split PDFs into individual pages.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/pdf-splitter" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>QR Code Generator</h2>
           <p>Create QR codes for URLs, text, and more.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/qr-generator" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>File Converter</h2>
           <p>Convert files to various formats.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/file-convertor" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>Password Generator</h2>
           <p>Generate strong and secure passwords.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/pwd-generator" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Comparer</h2>
           <p>Compare two PDFs for differences.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/pdf-compare" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Searchable Text</h2>
           <p>Make scanned PDFs searchable.</p>
-          <a href="#" class="btn">Use Tool</a>
+          <a href="/pdf-searchable" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
-        <h2>PDF Decrypt</h2>
+        <h2>PDF Engrypt/Decrypt</h2>
         <p>Remove password protection from PDFs.</p>
-        <a href="#" class="btn">Use Tool</a>
+        <a href="/pdf-encryptdecrypt" class="btn">Use Tool</a>
         </div>
       </div>
 
