--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <a href="/pdf-splitter" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
-          <h2>QR Code Generator</h2>
+          <h2>QR Code Generator (Contact)</h2>
           <p>Create QR codes for URLs, text, and more.</p>
           <a href="/qr-generator" class="btn">Use Tool</a>
         </div>
