--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
           <p>Create QR codes for URLs, text, and more.</p>
           <a href="/qr-generator" class="btn">Use Tool</a>
         </div>
-        <div class="tool-card">
-          <h2>File Converter</h2>
-          <p>Convert files to various formats.</p>
-          <a href="/file-convertor" class="btn">Use Tool</a>
-        </div>
+       /* <div class="tool-card"> */
+          /* <h2>File Converter</h2> */
+          /*  <p>Convert files to various formats.</p> */
+            /*<a href="/file-convertor" class="btn">Use Tool</a>*/
+        /* </div> */
         <div class="tool-card">
           <h2>Password Generator</h2>
           <p>Generate strong and secure passwords.</p>
