--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Free online tools for image and PDF processing, file conversion, QR code generation, and more. Compress, resize, merge, split, and convert files effortlessly.">
-  <meta name="keywords" content="image compression, PDF compression, image resizer, PDF merger, image converter, PDF splitter, QR code generator, file converter, password generator, PDF comparer, PDF searchable text, PDF Decrypt, PDF Encrypt, PDF remove password protection">
+  <meta name="keywords" content="image compression, PDF compression, image resizer, PDF merger, image converter, PDF splitter, QR code generator, QR Wi-Fi Sharing, QR WiFi code, file converter, PDF decrypt, password generator, PDF comparer, PDF searchable text, PDF Decrypt, PDF Encrypt, PDF remove password protection">
   <meta name="author" content="Your Website Name">
   <title>Free Online Tools - Image & PDF Processing, File Conversion</title>
   <style>
@@ -152,60 +152,60 @@
         <div class="tool-card">
           <h2>Image Compression</h2>
           <p>Compress images without losing quality.</p>
-          <a href="/img-compress.html" class="btn">Use Tool</a>
+          <a href="/Tools/img-compress.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Compression</h2>
           <p>Reduce PDF file size easily.</p>
-          <a href="/pdf-compress.html" class="btn">Use Tool</a>
+          <a href="/Tools/pdf-compress.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>Image Resizer</h2>
           <p>Resize images to any dimension.</p>
-          <a href="/img-resize.html" class="btn">Use Tool</a>
+          <a href="/Tools/img-resize.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Merger</h2>
           <p>Merge multiple PDFs into one.</p>
-          <a href="/pdf-merge.html" class="btn">Use Tool</a>
+          <a href="/Tools/pdf-merge.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>Image Converter</h2>
           <p>Convert images to different formats.</p>
-          <a href="/img-converter.html" class="btn">Use Tool</a>
+          <a href="/Tools/img-converter.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Splitter</h2>
           <p>Split PDFs into individual pages.</p>
-          <a href="/pdf-splitter" class="btn">Use Tool</a>
+          <a href="/Tools/pdf-splitter" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
-          <h2>QR Code Generator (Contact)</h2>
+          <h2>QR Contact</h2>
           <p>Create QR codes for URLs, text, and more.</p>
-          <a href="/qr-generator" class="btn">Use Tool</a>
+          <a href="/Tools/qr-generator" class="btn">Use Tool</a>
         </div>
-       /* <div class="tool-card"> */
-          /* <h2>File Converter</h2> */
-          /*  <p>Convert files to various formats.</p> */
-            /*<a href="/file-convertor" class="btn">Use Tool</a>*/
-        /* </div> */
+        <div class="tool-card">
+          <h2>QR Wi-Fi Sharing</h2>
+          <p>Create QR codes for URLs, text, and more.</p>
+          <a href="/Tools/qr-generator" class="btn">Use Tool</a>
+        </div>
         <div class="tool-card">
           <h2>Password Generator</h2>
           <p>Generate strong and secure passwords.</p>
-          <a href="/pwd-generator" class="btn">Use Tool</a>
+          <a href="/Tools/pwd-generator" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Comparer</h2>
           <p>Compare two PDFs for differences.</p>
-          <a href="/pdf-compare" class="btn">Use Tool</a>
+          <a href="/Tools/pdf-compare" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Searchable Text</h2>
           <p>Make scanned PDFs searchable.</p>
-          <a href="/pdf-searchable" class="btn">Use Tool</a>
+          <a href="/Tools/pdf-searchable" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
-        <h2>PDF Engrypt/Decrypt</h2>
+        <h2>PDF Decrypt</h2>
         <p>Remove password protection from PDFs.</p>
         <a href="/Tools/pdf-decrypt.html" class="btn">Use Tool</a>
         </div>
