--- a/index.html
+++ b/index.html
@@ -177,17 +177,17 @@
         <div class="tool-card">
           <h2>PDF Splitter</h2>
           <p>Split PDFs into individual pages.</p>
-          <a href="/Tools/pdf-splitter" class="btn">Use Tool</a>
+          <a href="/Tools/pdf-splitter.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>QR Contact</h2>
           <p>Create QR codes for URLs, text, and more.</p>
-          <a href="/Tools/qr-generator" class="btn">Use Tool</a>
+          <a href="/Tools/qr-generator.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>QR Wi-Fi Sharing</h2>
           <p>Create QR codes for URLs, text, and more.</p>
-          <a href="/Tools/qr-generator" class="btn">Use Tool</a>
+          <a href="/Tools/qr-wifi.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>Password Generator</h2>
@@ -197,12 +197,12 @@
         <div class="tool-card">
           <h2>PDF Comparer</h2>
           <p>Compare two PDFs for differences.</p>
-          <a href="/Tools/pdf-compare" class="btn">Use Tool</a>
+          <a href="/Tools/pdf-compare.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Searchable Text</h2>
           <p>Make scanned PDFs searchable.</p>
-          <a href="/Tools/pdf-searchable" class="btn">Use Tool</a>
+          <a href="/Tools/pdf-searchable.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
         <h2>PDF Decrypt</h2>
