--- a/qr-generator.html
+++ b/qr-generator.html
@@ -140,6 +140,12 @@
             const ssid = document.getElementById('ssid').value;
             const password = document.getElementById('password').value;
 
+            // Validate inputs
+            if (!ssid || !password) {
+                alert("Please enter both SSID and Password.");
+                return;
+            }
+
             // Generate Wi-Fi QR Code
             const wifiString = `WIFI:S:${ssid};T:WPA;P:${password};;`;
             const qrCodeContainer = document.getElementById('qr-code-container');
@@ -148,14 +154,19 @@
             qrCodeContainer.innerHTML = '';
 
             // Generate new QR code
-            new QRCode(qrCodeContainer, {
-                text: wifiString,
-                width: 256,
-                height: 256,
-                colorDark: "#000000",
-                colorLight: "#ffffff",
-                correctLevel: QRCode.CorrectLevel.H
-            });
+            try {
+                new QRCode(qrCodeContainer, {
+                    text: wifiString,
+                    width: 256,
+                    height: 256,
+                    colorDark: "#000000",
+                    colorLight: "#ffffff",
+                    correctLevel: QRCode.CorrectLevel.H
+                });
+            } catch (error) {
+                console.error("Error generating QR code:", error);
+                alert("An error occurred while generating the QR code. Please try again.");
+            }
         });
     </script>
 </body>
