--- a/pdf-compare.html
+++ b/pdf-compare.html
@@ -53,7 +53,7 @@
     </footer>
 
     <!-- PDF.js Library -->
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js" integrity="sha512-..."></script>
     <script src="pdf-compare.js"></script>
 </body>
 </html>
